# SnakeBevy

./: Cargo.toml
src/: game.rs  logic.rs  main.rs  rendering.rs
